Проект: смена GC, оптимизации